Fixed autoplay on iOs

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -11,7 +11,6 @@
     @media screen and (max-width: $mobile_size) {
         padding-top: 0;
     }
-
 }
 
 .introduction {
@@ -25,7 +24,6 @@
         flex-direction: column;
         align-self: flex-start;
         margin-left: 20px;
-        // justify-self: flex-start;
     }
 
     span {
@@ -35,9 +33,8 @@
     }
 
     &__greeter{
-        font-size: 2rem;
         @media screen and (max-width: $mobile_size) {
-            display: none;
+            font-size: 2rem;
         }
     }
    
